Move search bar to layout, fix nav menu

--- a/zzz_search.html
+++ b/zzz_search.html
@@ -67,13 +67,5 @@ function lunr_search(term) {
 }
 </script>
 </head>
-<body style="overflow: hidden; width: 200px; margin: 0;">
-<form onSubmit="return lunr_search(document.getElementById('search').value);">
-    <input type="text" style="width: 100%; padding-right: 32px;" id="search" name="q" maxlength="255" value="" placeholder="Search..." />
-    <button style="position: absolute; top: 1px; height: 28px; width: 32px; margin-left: -32px;
-                   border: 0; border-radius: 0px 3px 3px 0px; background: #75abcf">
-        <img src="/assets/images/baseline_search_white.png" alt="Search" width="24" height="24" style="position: relative; left: -3px;"/>
-    </button>
-</form>
-</body>
+<body></body>
 </html>
