Scroll results into view after search

--- a/zzz_search.html
+++ b/zzz_search.html
@@ -63,6 +63,7 @@ function lunr_search(term) {
         }
     }
     resultsDiv.style.visibility = "visible";
+    window.top.scrollTo(0, 0)
     return false;
 }
 </script>
